--- a/AboutPageAssets/styles/aboutPageStyle.css
+++ b/AboutPageAssets/styles/aboutPageStyle.css
@@ -26,15 +26,16 @@ body {
 		background-position: 0% 50%;
 	}
 }
-
-}
 /* Header */
 header {
 	text-align: center;
 	display: block;
 }
 header .profileLogo .logoPlaceholder {
-	background-color: rgba(208,207,207,1.00);
+		background: linear-gradient(-15deg,#3a45e0, #f23cf8 , #dd6f07, #07ad1d);
+	background-size: 400% 400%;
+	animation: gradient 5s ease infinite;
+	height: 50px;
 	width: 187px;
 	text-align: center;
 }
@@ -57,7 +58,7 @@ header .profilePhoto {
 header .profileHeader h1 {
 	font-family: 'Montserrat', sans-serif;
 	color: rgb(243, 243, 243);
-	font-size: 30px;
+	font-size: 40px;
 	font-weight: 700;
 	line-height: 24px;
 	font-weight: bold;
@@ -65,7 +66,7 @@ header .profileHeader h1 {
 header .profileHeader h3 {
 	font-family: sans-serif;
 	color: rgb(243, 243, 243);
-	font-size: 16px;
+	font-size: 30px;
 	font-weight: 700;
 	line-height: 24px;
 }
@@ -76,7 +77,7 @@ hr {
 header .profileHeader p {
 	font-family: sans-serif;
 	color: rgb(243, 243, 243);
-	font-size: 14px;
+	font-size: 20px;
 	font-weight: 400;
 	line-height: 1.8;
 	overflow-y: auto;
@@ -101,7 +102,7 @@ header .socialNetworkNavBar .socialNetworkNav img:hover {
 .section1 .sectionTitle, .section2 .sectionTitle {
 	font-family: 'Montserrat', sans-serif;
 	color: rgb(243, 243, 243);
-	font-size: 18px;
+	font-size: 20px;
 	font-weight: 700;
 	text-transform: uppercase;
 }
@@ -117,7 +118,7 @@ header .socialNetworkNavBar .socialNetworkNav img:hover {
 }
 .mainContent .section1 .section1Content {
 	font-family: ProximaNova;
-	font-size: 14px;
+	font-size: 20px;
 	font-weight: 100;
 	color: rgba(208,207,207,1.00);
 }
@@ -128,20 +129,21 @@ header .socialNetworkNavBar .socialNetworkNav img:hover {
 .section2 .sectionContentTitle {
 	font-family: sans-serif;
 	color: rgb(243, 243, 243);
-	font-size: 18px;
+	font-size: 20px;
 	font-weight: 700;
 }
 .section2 .sectionContentSubTitle {
 	font-family: sans-serif;
-	color: rgb(0, 0, 0);
-	font-size: 14px;
+	color: rgb(255, 255, 255);
+	font-size: 24px;
 	font-weight: 400;
 	font-weight: bold;
+	
 }
 .section2 .sectionContent {
 	font-family: sans-serif;
 	color: rgb(243, 243, 243);
-	font-size: 14px;
+	font-size: 20px;
 	font-weight: 400;
 	line-height: 1.8;
 }
@@ -149,12 +151,16 @@ header .socialNetworkNavBar .socialNetworkNav img:hover {
 	display: block;
 }
 .mainContent .externalResourcesNav .externalResources {
-	background-color: rgb(104, 20, 20);
+	background: linear-gradient(-15deg,#3a45e0, #f23cf8 , #dd6f07, #07ad1d);
+	background-size: 400% 400%;
+	animation: gradient 5s ease infinite;
+	height: 100vh;
 	display: inline-block;
 	text-align: center;
 	margin-top: 0px;
 	padding-top: 3%;
 	cursor: pointer;
+	
 }
 .mainContent .externalResourcesNav .externalResources:hover {
 	background-color: rgba(153,153,153,1.00);
@@ -162,7 +168,7 @@ header .socialNetworkNavBar .socialNetworkNav img:hover {
 .externalResourcesNav .externalResources a {
 	font-family: 'Montserrat', sans-serif;
 	color: rgba(255,255,255,1.00);
-	font-size: 14px;
+	font-size: 20px;
 	font-weight: 400;
 	line-height: 18px;
 	text-decoration: none;
@@ -176,7 +182,7 @@ header .socialNetworkNavBar .socialNetworkNav img:hover {
 /* Footer */
 footer .footerDisclaimer {
 	font-family: sans-serif;
-	font-size: 14px;
+	font-size: 20px;
 	line-height: 18px;
 	color: rgba(104,103,103,1.00);
 	font-weight: 700;
@@ -187,7 +193,7 @@ footer .footerDisclaimer span {
 }
 footer .footerNote {
 	font-family: sans-serif;
-	font-size: 14px;
+	font-size: 20px;
 	line-height: 18px;
 	color: rgba(104,103,103,1.00);
 	font-weight: 700;
@@ -419,3 +425,9 @@ footer .footerNote {
 	font-family: sans-serif;
 }
 
+}
+.Imagenprincipal{
+	width: 150px;
+	height: auto;
+}
+{
